feat : add document api

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-HOST = ""
-PORT = ""
-USER = ""
-DBNAME = ""
-PASSWORD = "" 
-SSLMODE = ""
+PGHOST = ""
+PGPORT = ""
+PGUSER = ""
+PGDBNAME = ""
+PGPASSWORD = ""
 JWT_SECRET = ""
+PORT = ""
