feat : add file .env

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-# DATABASE_URL=postgresql://${{ PGUSER }}:${{ PGPASSWORD }}@${{ PGHOST }}:${{ PGPORT }}/${{ PGDATABASE }}
-# PGHOST=monorail.proxy.rlwy.net
-# PGPORT=23834
-# PGUSER=postgres
-# PGDATABASE=railway
-# PGPASSWORD=rMexNKmGLUchCoVMnrqOZwulJXkCXFhv
-# JWT_SECRET=""
-# PORT=8080
+DATABASE_URL=postgresql://${{ PGUSER }}:${{ PGPASSWORD }}@${{ PGHOST }}:${{ PGPORT }}/${{ PGDATABASE }}
+PGHOST=monorail.proxy.rlwy.net
+PGPORT=23834
+PGUSER=postgres
+PGDATABASE=railway
+PGPASSWORD=rMexNKmGLUchCoVMnrqOZwulJXkCXFhv
+JWT_SECRET=
+PORT=8080
 
 PGHOST = localhost
 PGPORT = 5432
