--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,16 @@
-PGHOST = 
-PGPORT = 
-PGUSER = 
-PGDATABASE = 
-PGPASSWORD = 
+DATABASE_URL=postgresql://${{ PGUSER }}:${{ PGPASSWORD }}@${{ PGHOST }}:${{ PGPORT }}/${{ PGDATABASE }}
+PGHOST=monorail.proxy.rlwy.net
+PGPORT=23834
+PGUSER=postgres
+PGDATABASE=railway
+PGPASSWORD=rMexNKmGLUchCoVMnrqOZwulJXkCXFhv
+JWT_SECRET=
+PORT=8080
+
+PGHOST = localhost
+PGPORT = 5432
+PGUSER = postgres
+PGDATABASE = final-project
+PGPASSWORD = 123
 JWT_SECRET = 
-PORT = 
+PORT = 8080
